[package]
name = "arc-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = { version = "0.13.2", features = ["arithmetic", "hash2curve"] }
num-bigint = "0.4"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2"
thiserror = "2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4"
rand_chacha = "0.3"
